--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@balena/abstract-sql-compiler": "^7.14.1",
-    "@balena/es-version": "^1.0.0",
+    "@balena/es-version": "^1.0.1",
     "@balena/node-metrics-gatherer": "5.7.5",
     "@balena/pinejs": "^14.33.2",
     "@resin.io/device-types": "^10.5.0",
@@ -44,7 +44,7 @@
     "@types/memoizee": "^0.4.6",
     "@types/morgan": "^1.9.3",
     "@types/ndjson": "^2.0.1",
-    "@types/node": "^14.17.32",
+    "@types/node": "^16.11.6",
     "@types/node-schedule": "^1.3.2",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.4",
@@ -129,7 +129,8 @@
     "temp": "^0.9.4"
   },
   "engines": {
-    "node": ">=14.17.0"
+    "node": "^16.13.0",
+    "npm": "^8.1.1"
   },
   "husky": {
     "hooks": {
