--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/escape-html": "^1.0.1",
     "@types/express": "^4.17.13",
     "@types/express-serve-static-core": "^4.17.25",
+    "@types/ioredis": "^4.28.1",
     "@types/json-schema": "^7.0.9",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/lodash": "^4.14.177",
@@ -74,6 +75,7 @@
     "express": "^4.17.1",
     "fast-boot2": "^1.1.0",
     "fast-glob": "^3.2.7",
+    "ioredis": "^4.28.0",
     "ipaddr.js": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
