--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.36",
     "@types/cache-manager": "^3.4.2",
+    "@types/cache-manager-ioredis": "^2.0.2",
     "@types/cookie-session": "^2.0.43",
     "@types/escape-html": "^1.0.1",
     "@types/express": "^4.17.13",
@@ -66,7 +67,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cache-manager": "^3.6.0",
-    "cache-manager-redis-store": "^2.0.0",
+    "cache-manager-ioredis": "^2.1.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
