--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/bluebird": "^3.5.36",
     "@types/cache-manager": "^3.4.2",
     "@types/cache-manager-ioredis": "^2.0.2",
+    "@types/common-tags": "^1.8.1",
     "@types/cookie-session": "^2.0.43",
     "@types/escape-html": "^1.0.1",
     "@types/express": "^4.17.13",
@@ -67,6 +68,7 @@
     "body-parser": "^1.19.0",
     "cache-manager": "^3.6.0",
     "cache-manager-ioredis": "^2.1.0",
+    "common-tags": "^1.8.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
