--- a/package.json
+++ b/package.json
@@ -124,11 +124,9 @@
     "mockery": "^2.1.0",
     "nock": "^13.2.4",
     "pinejs-client-supertest": "^1.3.3",
-    "resin-token": "^4.2.2",
     "rimraf": "^3.0.2",
     "sinon": "^12.0.1",
-    "supertest": "^6.2.2",
-    "temp": "^0.9.4"
+    "supertest": "^6.2.2"
   },
   "engines": {
     "node": "^16.13.0",
