--- a/package.json
+++ b/package.json
@@ -138,12 +138,14 @@
     }
   },
   "mocha": {
-    "reporter": "spec",
-    "sort": true,
-    "timeout": 20000,
-    "delay": true,
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
     "exit": true,
-    "_": "index.js"
+    "timeout": 60000
   },
   "versionist": {
     "publishedAt": "2022-03-24T10:49:13.108Z"
