--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/raven": "^2.5.4",
     "@types/redlock": "^4.0.3",
     "@types/request": "^2.48.8",
+    "@types/semver": "^7.3.9",
     "@types/tar": "^6.1.1",
     "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.1",
@@ -96,6 +97,7 @@
     "redlock": "^4.2.0",
     "request": "^2.88.2",
     "rsmq": "^0.12.4",
+    "semver": "^7.3.5",
     "strict-event-emitter-types": "^2.0.0",
     "supervisor": "^0.12.0",
     "tar": "^6.1.11",
