--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ jobs:
   build:
     docker:
       - image: library/docker:19-git
+    resource_class: small
     working_directory: /tmp/build
     environment:
       DOCKER_IMAGE: balena/open-balena-api
