--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@balena/es-version": "^1.0.1",
     "@balena/node-metrics-gatherer": "5.7.5",
     "@balena/pinejs": "^14.39.1",
+    "@sentry/node": "^6.19.2",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.36",
     "@types/cache-manager": "^3.4.3",
@@ -52,7 +53,6 @@
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.6",
     "@types/randomstring": "^1.1.8",
-    "@types/raven": "^2.5.4",
     "@types/redlock": "^4.0.3",
     "@types/request": "^2.48.8",
     "@types/tar": "^6.1.1",
@@ -92,7 +92,6 @@
     "passport-jwt": "^4.0.0",
     "randomstring": "^1.2.2",
     "rate-limiter-flexible": "^2.3.6",
-    "raven": "^2.6.4",
     "redlock": "^4.2.0",
     "request": "^2.88.2",
     "rsmq": "^0.12.4",
