--- a/repo.yml
+++ b/repo.yml
@@ -2,8 +2,10 @@ type: 'node'
 upstream:
   - repo: '@balena/pinejs'
     url: https://github.com/balena-io/pinejs
-  - repo: 'open-balena-base'
+    module: '@balena/pinejs'
+  - repo: 'balena/open-balena-base'
     url: 'https://github.com/balena-io/open-balena-base'
+    module: 'balena/open-balena-base'
   - repo: 'typed-error'
     url: 'https://github.com/balena-io-modules/typed-error'
   - repo: '@balena/node-metrics-gatherer'
