--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "generate-model-types": "npm run materialize-config && echo '/**\n * This file is auto-generated with `npm run generate-model-types`\n */\n' > src/balena-model.ts && npx abstract-sql-compiler generate-types .materialized-config.json >> src/balena-model.ts",
     "build": "npm run clean && tsc --project ./tsconfig.build.json && copyup \"src/**/*.sbvr\" \"src/**/*.sql\" dist/",
     "clean": "rimraf dist/",
+    "cleanup": "rm .fast-boot.json .pinejs-cache.json || true",
     "lint": "balena-lint src/ test/ typings/ init.ts index.js && tsc --noEmit --project .",
     "prettify": "balena-lint --fix src/ test/ typings/ init.ts index.js",
     "prepack": "npm run build",
