--- a/.resinci.yml
+++ b/.resinci.yml
@@ -8,3 +8,7 @@ docker:
       dockerfile: Dockerfile
       docker_repo: balena/open-balena-api
       publish: true
+    - path: .
+      dockerfile: Dockerfile
+      docker_repo: balena/open-balena-api:no-systemd
+      publish: true
