--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node-schedule": "^2.1.0",
     "@types/on-finished": "^2.3.1",
     "@types/passport-jwt": "^3.0.6",
+    "@types/proxy-addr": "^2.0.0",
     "@types/randomstring": "^1.1.8",
     "@types/redlock": "^4.0.3",
     "@types/request": "^2.48.8",
@@ -93,6 +94,7 @@
     "on-finished": "^2.4.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "proxy-addr": "^2.0.7",
     "randomstring": "^1.2.2",
     "rate-limiter-flexible": "^2.3.8",
     "redlock": "^4.2.0",
