--- a/package.json
+++ b/package.json
@@ -30,16 +30,18 @@
     "prepack": "npm run build",
     "test:compose": "./automation/test.sh",
     "test": "npm run lint",
-    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
+    "serve-openapi": "redoc-cli serve --ssr ./example-openapi.json",
+    "build-openapi": "redoc-cli build ./example-openapi.json"
   },
   "dependencies": {
     "@balena/abstract-sql-compiler": "^9.0.3",
     "@balena/env-parsing": "^1.1.5",
     "@balena/es-version": "^1.0.2",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^15.3.13",
     "@balena/pinejs-webresource-cloudfront": "^0.0.5",
     "@sentry/node": "^7.49.0",
+    "@balena/pinejs": "14.50.0-odata-metadata-json-dbd8d4b1c1b8823be2e600498d75212069c82708",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.38",
     "@types/cache-manager": "^4.0.2",
