--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@balena/env-parsing": "^1.1.0",
     "@balena/es-version": "^1.0.1",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^14.51.0",
+    "@balena/pinejs": "14.51.0",
     "@sentry/node": "^7.12.1",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.36",
@@ -95,6 +95,7 @@
     "memoizee": "^0.4.15",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "ndjson": "^2.0.0",
     "node-schedule": "^2.1.0",
     "on-finished": "^2.4.1",
