--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,19 @@
 - commits:
+    - subject: Update grafana/loki Docker tag to v2.6.1
+      hash: 5a594d185af5f360ddd9738f993b3c3908080747
+      body: |
+        Update grafana/loki to 2.6.1
+
+        Update grafana/loki from 2.0.0 to 2.6.1
+      footer:
+        Change-type: minor
+        change-type: minor
+      author: Renovate Bot
+      nested: []
+  version: 4.8.0
+  title: ""
+  date: 2022-09-29T11:30:45.475Z
+- commits:
     - subject: Update balena/open-balena-base Docker tag to v13.5.2
       hash: 8c3bd1ed7a4e97f5cf6279fd63dae3aa9613b3a4
       body: |
