--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,19 @@
 - commits:
+    - subject: Update dependency @types/mocha to 10.0.0
+      hash: 39e606d95ff240d0e84ebe8cbeb47cf12087979c
+      body: |
+        Update @types/mocha to 10.0.0
+
+        Update @types/mocha from 9.1.1 to 10.0.0
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Renovate Bot
+      nested: []
+  version: 4.8.1
+  title: ""
+  date: 2022-09-29T11:57:59.544Z
+- commits:
     - subject: Update grafana/loki Docker tag to v2.6.1
       hash: 5a594d185af5f360ddd9738f993b3c3908080747
       body: |
