--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
     "@sentry/node": "^7.12.1",
     "@types/basic-auth": "^1.1.3",
     "@types/bluebird": "^3.5.36",
-    "@types/cache-manager": "^4.0.2",
-    "@types/cache-manager-ioredis": "^2.0.2",
     "@types/common-tags": "^1.8.1",
     "@types/compressible": "^2.0.0",
     "@types/compression-next": "^1.0.0",
@@ -75,7 +73,7 @@
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.0",
     "cache-manager": "^5.0.0",
-    "cache-manager-ioredis": "^2.1.0",
+    "cache-manager-ioredis-yet": "^1.0.0",
     "common-tags": "^1.8.2",
     "compressible": "^2.0.18",
     "compression": "^1.7.4",
