--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -16,7 +16,8 @@
 		"removeComments": true,
 		"sourceMap": true,
 		"skipLibCheck": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"esModuleInterop": true
 	},
 	"include": [
 		"src/**/*.ts",
